--- a/.editorconfig
+++ b/.editorconfig
@@ -4,9 +4,9 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 
-[*.{js,html,svg,md,txt,json}]
+[*.{js,html,svg,md,txt,json,css}]
 charset = utf-8
 
-[*.{html, js, json}]
+[*.{html, js, json, css}]
 indent_style = space
 indent_size = 2
